--- a/templates/index.html
+++ b/templates/index.html
@@ -58,9 +58,9 @@
                 <th>BASE</th>
             </tr>
             
-            {% for user in users %}
+            {% for base in datos %}
             <tr>
-                <td>{{ user.base }}</td>   
+                <td>{{ base.base }}</td>   
                
             </tr>   
             {% endfor %}
